# debug_macro

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  performance.cpp
examples/: CMakeLists.txt  advanced_usage.cpp
include/: debug_macro.hpp
tests/: CMakeLists.txt  advanced.cpp  basic.cpp
tool-scripts/: plot_benchmark.gnu
